# empire

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  PLAYING.md  README.md  attack.cpp  cpu.cpp  cpu_strategy.h  diplomacy.cpp  diplomacy.h  economy.cpp  economy.h  empire.cpp  empire.h  grain.cpp  investments.cpp  platform.h  population.cpp  ui.cpp  ui.h
.claude/commands/: ship.md  trace.md
